language/move-lang/tests/move_check/borrows/mutate_combo_invalid.exp
error: 

    ┌── tests/move_check/borrows/mutate_combo_invalid.move:14:9 ───
    │
 14 │         *s = S { f: 0, g: 0 };
    │         ^^^^^^^^^^^^^^^^^^^^^ Invalid mutation of reference.
    ·
 13 │         if (cond) f = &s.f else f = &s.g;
    │                       ---- Field 'f' is still being borrowed by this reference
    ·
 13 │         if (cond) f = &s.f else f = &s.g;
    │                                     ---- Field 'g' is still being borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/mutate_combo_invalid.move:23:9 ───
    │
 23 │         *s = S { f: 0, g: 0 };
    │         ^^^^^^^^^^^^^^^^^^^^^ Invalid mutation of reference.
    ·
 22 │         if (cond) f = &mut s.f else f = &mut other.f;
    │                       -------- Field 'f' is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/mutate_combo_invalid.move:32:9 ───
    │
 32 │         *s = S { f: 0, g: 0 };
    │         ^^^^^^^^^^^^^^^^^^^^^ Invalid mutation of reference.
    ·
 31 │         if (cond) f = s else f = other;
    │                       - It is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/mutate_combo_invalid.move:41:9 ───
    │
 41 │         *s = S { f: 0, g: 0 };
    │         ^^^^^^^^^^^^^^^^^^^^^ Invalid mutation of reference.
    ·
 40 │         if (cond) f = id_mut(s) else f = other;
    │                       --------- It is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/mutate_combo_invalid.move:49:19 ───
    │
 49 │         if (cond) *s = S { f: 0, g: 0 };
    │                   ^^^^^^^^^^^^^^^^^^^^^ Invalid mutation of reference.
    ·
 48 │         let f = &s.f;
    │                 ---- Field 'f' is still being borrowed by this reference
    │

